chore: update xProjectId identifier
